feat: optional deployed SSA snapshot that replaces the deployed cache snapshot